<resources>
    <string name="hello">Hello World, starterActivity!</string>
    <string name="app_name">Timeline 2</string>
    <string name="create_note_name">Create a new note</string>
    <string name="create_reflection_name">Submit a new reflection</string>
	<string name="save_label">Save</string>
	<string name="discard_label">Discard</string>
	<string name="Edit_label">Edit</string>
	<string name="Delete_item_label">Delete item</string>
	<string name="Delete_tag_label">Do you really want to delete tag \"</string>
	<string name="Delete_event_label">Delete event</string>
	<string name="Delete_event_title">Delete?</string>
	<string name="Delete_event_confirmation">Do you really want to delete entire event?</string>
	<string name="yes_label">Yes</string>
	<string name="no_label">No</string>
	<string name="Delete_timeline_label">Delete timeline</string>
	<string name="Delete_timeline_title">Delete timeline?</string>
	<string name="Leave_group_label">Leave group</string>
	<string name="Leave_group_title">Leave group?</string>
	<string name="Delete_timeline_confirmation">Do you really want to delete the entire timeline?</string>
	<string name="Leave_group_confirmation">Do you really want to leave this group?</string>
	<string name="Open_timeline_label">Open timeline</string>
	<string name="Add_to_timeline_label">Add to this timeline</string>
	<string name="Username_label">Username:</string>
	<string name="Enter_name_label">Create a new timeline</string>
	<string name="Timelinename_hint">Name of timeline</string>
	<string name="Groupname_hint">Name of group</string>
	<string name="ShareTimeline_label">Share timeline</string>
	<string name="Select_Timeline_label">Select a timeline!</string>
	<string name="Last_synced_label">Last synced:</string>
	<string name="Add_user_label">Add user</string>
	<string name="Select_user_label">Select a user:</string>
	<string name="Not_shared_label">Not shared</string>
	<string name="Shared_label">Shared</string>
	<string name="Show_creator_label">Show creator</string>
	<string name="Group_name_label">Enter a name for your group!</string>
	<string name="OK_label">OK</string>
	<string name="Cancel_label">Cancel</string>
	<string name="Really_leave_group_label">Do you really want to leave group </string>
	<string name="Left_group_label">You have left group: </string>
	<string name="Tag_name_hint">Enter a tag name</string>
	<string name="Tag_name_label">Enter a name for tag!</string>
	<string name="Note_title_hint">Enter note title</string>
	<string name="Note_text_hint">Enter note text</string>
	<string name="Create_tag_label">Create new tag</string>
	<string name="Add_users_label">Add users</string>
	<string name="Add_group_label">Add group</string>
	<string name="Select_group_to_share_label">Select a group to share with</string>
	<string name="Share_with_group_label">Share with group: </string>
	<string name="Share_label">Share</string>
	<string name="Show_in_timeline_label">Show in a timeline</string>
	<string name="My_groups_label">My Groups:</string>
	<string name="Shared_with_label">Shared with: </string>
	<string name="Private_timeline_label">Private timeline</string>
	<string name="Share_note_label">Share note</string>
	<string name="Share_reflection_label">Share reflection</string>
	<string name="Reflection_title_hint">Enter reflection title</string>
	<string name="Reflection_text_hint">Enter reflection text</string>
	<string name="Profile_user_name_label">User name</string>
	<string name="Profile_achievement_points_label">Achievement points:</string>
	<string name="Profile_achievement_count_label">Number of achievements:</string>
	<string name="Create_new_reflection_space_user_label">Create new user</string>
	<string name="Create_new_reflection_space_user_your_name_label">Your name:</string>
	<string name="Create_new_reflection_space_user_text_label">Create new user on the reflection space</string>
	<string name="Login_reflection_space_user_text_label">Login to the reflection space</string>
	<string name="Leaderboard_headline_label">Best of the bunch</string>
	<string name="Reflection_question">Q:Write a summary of your day:
					\nA:
					\nQ:What have you done well?
					\nA:
					\nQ:What could you have done better?
					\nA:
					\nQ:Anything you would have done differently?
					\nA:
					\nQ:Have you learned anything new?
					\nA:
</string>
	<string name="Not_registered">Not registered. Registering user.</string>
	<string name="Checking_user">Checking user against server ...</string>
	<string name="Could_not_sync">Couldn\'t retrieve last synced time</string>
	<string name="Synchronizing">Synchronizing timelines</string>
	<string name="Loading_all_users">Loading all users ...</string>
	<string name="Loading_my_groups">Loading my groups ...</string>
    <string name="picture">Picture</string>
    <string name="video"> Video </string>
    <string name="barcode"> Barcode </string>
    <string name="file"> File </string>
    <string name="url"> Url </string>
    <string name="audio"> Audio</string>
    <string name="play_label">Play</string>
    <string name="like_label">Like</string>
    <string name="extract_item_label">Extract item to new event</string>
    <string name="like_toast">You like this event!</string>
    <string name="cool_toast">You think this event is cool!</string>
    <string name="dislike_toast">You dislike this event.</string>
    <string name="sad_toast">This event makes you sad.</string>
    <string name="No_connection_toast">You are not connected to Internet. Some functions will not be available. But you can still collect your experiences!</string>
	<string name="Synced_toast">Timelines synced!</string>
	<string name="Offline_toast">You can only create private timelines in offline mode</string>
	<string name="Online_functionality_toast">You have to be connected to Internet to use this functionality</string>
	<string name="No_shared_timelines_toast">No shared timelines exists yet. Synchronize, create new or share a private timeline!</string>
	<string name="No_private_timelines_toast">No private timelines exists yet. Create a new one first or look in \"my shared timelines\"</string>
	<string name="No_timelines_toast">No timelines exists yet. Create a new one or synchronize!</string>
	<string name="Already_registered_toast">Already registered!</string>
	<string name="Created_group_toast">You have created the group: </string>
	<string name="New_users_toast">New users has been added to group </string>
	<string name="No_users_toast">No more users to add</string>
	<string name="Not_implemented_toast">Not implemented yet.</string>
	<string name="Created_tag_toast">You have created the tag: </string>
	<string name="No_tag_selected_toast">No tag selected! Select one or more tags to use this functionality</string>
	<string name="No_tag_events_toast">The tag(s) you have selected has no attached events!</string>
	<string name="Mood_added_toast">Your mood is added to server!</string>
	<string name="Note_not_created_toast">Note was not created</string>
	<string name="Note_edited_toast">Note edited</string>
	<string name="Note_not_edited_toast">Note was not edited</string>
	<string name="Note_created_toast">Note created</string>
	<string name="Audio_created_toast">Audio recording created</string>
	<string name="Audio_not_created_toast">Audio was not recorded</string>
	<string name="Video_created_toast">Video recording created</string>
	<string name="Video_not_created_toast">Video was not taken</string>
	<string name="Pic_created_toast">Picture created</string>
	<string name="Pic_not_created_toast">Picture was not taken</string>
	<string name="Tag_not_added_toast">Tag was not added</string>
	<string name="Video_selected_toast">Video was selected</string>
	<string name="Attach_not_toast">Attachment was not added</string>
	<string name="SD_toast">SD card not available</string>
	<string name="Zoomed_out_toast">You are max zoomed out</string>
	<string name="Zoomed_out_back_toast">You are max zoomed out, press back once more to go exit timeline mode</string>
	<string name="Select_group_toast">You have to select a group to share the timeline with!</string>
	<string name="Has_been_shared_toast"> has been shared with </string>
	<string name="Timeline_deleted_toast"> has been deleted from the phone</string>
	<string name="Reflection_added_toast">Reflection added</string>
	<string name="Reflection_not_added_toast">Reflection was not added</string>
	<string name="Reflection_edited_toast">Reflection edited</string>
	<string name="Reflection_not_edited_toast">Reflection not edited</string>
	<string name="User_created_toast">The user was created! Please log in.</string>
	<string name="User_logged_in_toast">You are now logged into the reflection space server</string>
	<string name="Points_rewarded_toast"> Points rewarded: </string>
	<string name="First_pic_achi_toast">Congratulations! You have taken your first picture with Timeline!</string>
	<string name="Tenth_pic_achi_toast">You have taken ten pictures with Timeline! If one picture is worth a thousand words, what\'s ten pictures worth?</string>
	<string name="First_video_achi_toast">Congratulations! You have recorded your first video with Timeline!</string>
	<string name="Tenth_video_achi_toast">That\'s your tenth video recording! Is your father\'s name Steven Spielberg?</string>
	<string name="First_audio_achi_toast">Congratulations! You have recorded your first audio with Timeline!</string>
	<string name="Tenth_audio_achi_toast">You have recorded ten audio clips! You must love the sound of your voice!</string>
	<string name="First_note_achi_toast">Congratulations! You have written your first note in Timeline!</string>
	<string name="Tenth_note_achi_toast">You have written ten notes! Let\'s hope you value quality as much as you do quantity.</string>
	<string name="First_reflection_achi_toast">Congratulations! You have added your first reflection in Timeline!</string>
	<string name="Tenth_reflection_achi_toast">That was your tenth reflection! Learning is a treasure that will follow its owner everywhere.</string>
	<string name="First_mood_achi_toast">Congratulations! You have added your first mood in Timeline!</string>
	<string name="Tenth_mood_achi_toast">You have added your mood for the tenth time! You must have many mood rings..</string>
	<string name="Element_added_achi_toast">You just added your first element!</string>
    <string name="new_timeline">Enter the name of your timeline</string>
    <string name="no_events_toast">You have no events this day</string>
    <string name="connection_to_swarm_failed_check_your_network_connection">Connection to swarm failed. Check your internet connection.</string>
    <string name="no_achievements_found">No achievements found.</string>
<string-array name="attachment_types">
	<item>@string/picture</item>
	<item>@string/video</item>
	<item>@string/audio</item>
	<item>@string/barcode</item>

</string-array>
	<string name="openMapView">Open Mapview</string>
	<string name="map_view">Open Map View</string>
	<string name="average_timeline_mood">See average timeline mood</string>
	<string name="email_title">Send activity report!</string>
	<string name="tutorial">Tutorial</string>
	<string name="done">Done</string>
	<string name="back">Back</string>
	<string name="tutorial_title">Tutorial</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
</resources>