<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@color/White">

<ScrollView android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:id="@+id/ReflectionScrollView" 
    android:layout_above="@+id/TimelineMenuDockLinearLayout" 
    android:layout_alignParentTop="true" 
    android:background="@color/White">
    <RelativeLayout android:id="@+id/RelativeLayout01" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:background="@color/White">
        <EditText android:layout_height="wrap_content" 
            android:layout_width="fill_parent" 
            android:id="@+id/ReflectionTitleEditText" 
            android:hint="@string/Reflection_title_hint">
        </EditText>
      <!--  
        <EditText android:layout_height="wrap_content" 
            android:layout_width="fill_parent" 
            android:id="@+id/ReflectionTextEditText" 
            android:hint="@string/Reflection_text_hint" 
            android:layout_below="@+id/ReflectionTitleEditText">
        </EditText>
       --> 
    </RelativeLayout>
</ScrollView>




<RelativeLayout android:id="@+id/TimelineMenuDockLinearLayout" android:layout_width="fill_parent" android:layout_alignParentBottom="true" android:background="@drawable/quickcontact_slider_background" android:layout_height="50dip">
<LinearLayout android:id="@+id/ReflectionConfirmButtonsLinearLayout" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:layout_alignParentRight="true">
        
    <Button android:layout_height="wrap_content" 
        android:id="@+id/SaveReflectionButton" 
        android:text="@string/save_label" 
        android:layout_width="80dip" 
        android:layout_gravity="right">
    </Button>
	<Button android:layout_height="wrap_content" 
	    android:id="@+id/DiscardReflectionButton" 
	    android:text="@string/discard_label" 
	    android:layout_width="80dip" 
	    android:layout_gravity="right">
	</Button>
	<Button android:layout_height="wrap_content" 
	    android:id="@+id/ShareReflectionButton" 
	    android:text="@string/Share_reflection_label" 
	    android:layout_width="80dip" 
	    android:layout_gravity="right">
	</Button>
</LinearLayout>
</RelativeLayout>

</RelativeLayout>

